batman-adv-kernelland (0.2~beta~svn1336-1) UNRELEASED; urgency=low

  * New Upstream Snapshot (Closes: #xxxxx)
  * debian/patches:
    - Remove upstream merged patches 100-iface-after-forward-broadcast.patch,
      101-rcu_iflist.patch, 102-log-irqenable-sleep.patch,
      103-icmp-userspace-read.patch, 104-endless-recv.patch,
      105-icmp-check.patch

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Mon, 13 Jul 2009 23:22:21 +0200

batman-adv-kernelland (0.1-9) unstable; urgency=low

  * debian/rules:
    - Use the kernel makefiles directly to build the module to match
      linux-modules-extra-2.6 way of building it
    - Add get-orig-source target to retrieve source
  * debian/patches:
    - 103-outoftree_kbuild.patch, remove due to different linux module build
      approach
    - Add 103-icmp-userspace-read.patch, read complete icmp packet from
      userspace
    - Add 104-endless-recv.patch, consume even ignored packets to allow kernel
      receive thread to sleep
    - Add 105-icmp-check.patch, check for correct icmp version before sending it
  * Convert debian/copyright to new dep5 version
  * Upgraded to policy 3.8.2, no changes required
  * Add debian/get-orig-source.sh to get source from svn or via uscan

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Thu, 25 Jun 2009 01:08:41 +0200

batman-adv-kernelland (0.1-8) unstable; urgency=low

  * Allow Debian Maintainers to upload new versions of batman-adv-kernelland

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Wed, 06 May 2009 13:04:37 +0200

batman-adv-kernelland (0.1-7) unstable; urgency=low

  * Install kernel module source tarball to batman-adv.tar.bz2 instead of
    batman-adv-source.tar.bz2
  * Allow out of tree module build for linux-modules-extra-2.6

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Thu, 09 Apr 2009 20:00:59 +0200

batman-adv-kernelland (0.1-6) unstable; urgency=low

  * Move to new section kernel
  * Upgraded to policy 3.8.1, no changes required