@@ -8,12 +8,12 @@ Homepage: http://www.open-mesh.net/
 Standards-Version: 3.8.2
 Vcs-Browser: http://git.debian.org/?p=collab-maint/batman-adv-kernelland.git
 Vcs-Git: git://git.debian.org/git/collab-maint/batman-adv-kernelland.git
-Build-Depends: debhelper (>= 7), quilt
+Build-Depends: debhelper (>= 7)
 Build-Depends-Indep: bzip2
 
 Package: batman-adv-source
 Architecture: all
-Depends: module-assistant, debhelper (>= 7), make, bzip2, quilt
+Depends: module-assistant, debhelper (>= 7), make, bzip2
 Recommends: batman-adv-battool
 Description: Source for the batman-advanced kernel module
  This package provides the source code for the batman-adv-source kernel modules.
